// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch api test Launch api test = failing 1`] = `
Object {
  "metadata": Object {
    "branchInfo": "noise_removed:branchInfo",
    "endedTimestamp": 26,
    "fileName": "noise_removed/packages/root-cause-core/lib/assortedHooks.ts",
    "hasNetworkLogs": true,
    "systemInfo": Object {
      "automationFramework": "puppeteer",
      "browser": "chromium",
      "browserPlatform": "noise_removed:browserPlatform",
      "browserVersion": "HeadlessChrome/85.0.4182.0",
      "modelName": "noise_removed:modelName",
      "modelVersion": "noise_removed:modelVersion",
      "pageViewport": Object {
        "height": 600,
        "width": 800,
      },
      "userAgent": "noise_removed:userAgent",
    },
    "testEndStatus": Object {
      "error": Object {
        "message": "'1' == '2'",
        "name": "AssertionError",
        "stack": "AssertionError [ERR_ASSERTION]: '1' == '2'
    at noise_removed/packages/root-cause-core/lib/launch-api.test.ts:129:24
    at Object.launchImpl (noise_removed/packages/root-cause-core/lib/launch.ts:97:9)
    at waitForActual (assert.js:692:5)
    at Function.rejects (assert.js:801:25)
    at Object.<anonymous> (noise_removed/packages/root-cause-core/lib/launch-api.test.ts:100:9)",
      },
      "success": false,
    },
    "testFullName": "1-Launch api test Launch api test = failing",
    "testName": "Launch api test Launch api test = failing",
    "timestamp": 3,
  },
  "steps": Array [
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                _runId: localRunId,",
          "            },",
          "            async (page) => {",
          "                await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 106,
        "row": 109,
        "toRowNumber": 112,
      },
      "consoleEntries": Array [],
      "endTimestamp": 5,
      "fnName": "goto",
      "index": 1,
      "name": "goto \\"http://jsbin.testim.io/ner/1\\"",
      "screenshot": "1.page-goto.jpg",
      "startTimestamp": 4,
      "text": "http://jsbin.testim.io/ner/1",
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "            async (page) => {",
          "                await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 108,
        "row": 111,
        "toRowNumber": 114,
      },
      "consoleEntries": Array [],
      "endTimestamp": 7,
      "fnName": "click",
      "index": 2,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "2.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 6,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 109,
        "row": 112,
        "toRowNumber": 115,
      },
      "consoleEntries": Array [],
      "endTimestamp": 9,
      "fnName": "click",
      "index": 3,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "3.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 8,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 110,
        "row": 113,
        "toRowNumber": 116,
      },
      "consoleEntries": Array [],
      "endTimestamp": 11,
      "fnName": "click",
      "index": 4,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "4.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 10,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
        ],
        "fromRowNumber": 111,
        "row": 114,
        "toRowNumber": 117,
      },
      "consoleEntries": Array [],
      "endTimestamp": 13,
      "fnName": "click",
      "index": 5,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "5.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 12,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 112,
        "row": 115,
        "toRowNumber": 118,
      },
      "consoleEntries": Array [],
      "endTimestamp": 15,
      "fnName": "click",
      "index": 6,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "6.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 14,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
          "",
        ],
        "fromRowNumber": 113,
        "row": 116,
        "toRowNumber": 119,
      },
      "consoleEntries": Array [],
      "endTimestamp": 17,
      "fnName": "click",
      "index": 7,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "7.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 16,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
          "",
          "                const counter = await page.$('#counter');",
        ],
        "fromRowNumber": 114,
        "row": 117,
        "toRowNumber": 120,
      },
      "consoleEntries": Array [],
      "endTimestamp": 19,
      "fnName": "click",
      "index": 8,
      "name": "click \\"#reset\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "8.page-click.jpg",
      "selector": "#reset",
      "startTimestamp": 18,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
          "",
          "                const counter = await page.$('#counter');",
          "",
        ],
        "fromRowNumber": 115,
        "row": 118,
        "toRowNumber": 121,
      },
      "consoleEntries": Array [],
      "endTimestamp": 21,
      "fnName": "click",
      "index": 9,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "9.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 20,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 34,
        "errorLines": Array [
          "                    throw new Error('counter not found');",
          "                }",
          "",
          "                const textProp = await counter.getProperty('innerText');",
          "                const text = await textProp.jsonValue();",
          "",
          "                assert.equal(text, '2');",
        ],
        "fromRowNumber": 123,
        "row": 126,
        "toRowNumber": 129,
      },
      "consoleEntries": Array [],
      "endTimestamp": 23,
      "fnName": "getProperty",
      "index": 10,
      "name": "getProperty",
      "screenshot": "10.elementhandle-getProperty.jpg",
      "startTimestamp": 22,
      "unhandledExceptions": Array [],
    },
    Object {
      "endTimestamp": 25,
      "fnName": "Assertion Error",
      "index": 11,
      "name": "Assertion Error \\"'1' == '2'\\"",
      "rect": Object {
        "error": "possible noise removed",
      },
      "screenshot": null,
      "startTimestamp": 24,
      "stepError": Object {
        "message": "'1' == '2'",
        "name": "AssertionError",
        "stack": "AssertionError [ERR_ASSERTION]: '1' == '2'
    at noise_removed/packages/root-cause-core/lib/launch-api.test.ts:129:24
    at Object.launchImpl (noise_removed/packages/root-cause-core/lib/launch.ts:97:9)
    at waitForActual (assert.js:692:5)
    at Function.rejects (assert.js:801:25)
    at Object.<anonymous> (noise_removed/packages/root-cause-core/lib/launch-api.test.ts:100:9)",
      },
      "text": "'1' == '2'",
    },
  ],
}
`;

exports[`Launch api test Launch api test passing 1`] = `
Object {
  "metadata": Object {
    "branchInfo": "noise_removed:branchInfo",
    "endedTimestamp": 24,
    "fileName": "noise_removed/packages/root-cause-core/lib/assortedHooks.ts",
    "hasNetworkLogs": true,
    "systemInfo": Object {
      "automationFramework": "puppeteer",
      "browser": "chromium",
      "browserPlatform": "noise_removed:browserPlatform",
      "browserVersion": "HeadlessChrome/85.0.4182.0",
      "modelName": "noise_removed:modelName",
      "modelVersion": "noise_removed:modelVersion",
      "pageViewport": Object {
        "height": 600,
        "width": 800,
      },
      "userAgent": "noise_removed:userAgent",
    },
    "testEndStatus": Object {
      "success": true,
    },
    "testFullName": "1-Launch api test Launch api test passing",
    "testName": "Launch api test Launch api test passing",
    "timestamp": 3,
  },
  "steps": Array [
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                _runId: localRunId,",
          "            },",
          "            async (page) => {",
          "                await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 43,
        "row": 46,
        "toRowNumber": 49,
      },
      "consoleEntries": Array [],
      "endTimestamp": 5,
      "fnName": "goto",
      "index": 1,
      "name": "goto \\"http://jsbin.testim.io/ner/1\\"",
      "screenshot": "1.page-goto.jpg",
      "startTimestamp": 4,
      "text": "http://jsbin.testim.io/ner/1",
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "            async (page) => {",
          "                await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 45,
        "row": 48,
        "toRowNumber": 51,
      },
      "consoleEntries": Array [],
      "endTimestamp": 7,
      "fnName": "click",
      "index": 2,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "2.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 6,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 46,
        "row": 49,
        "toRowNumber": 52,
      },
      "consoleEntries": Array [],
      "endTimestamp": 9,
      "fnName": "click",
      "index": 3,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "3.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 8,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 47,
        "row": 50,
        "toRowNumber": 53,
      },
      "consoleEntries": Array [],
      "endTimestamp": 11,
      "fnName": "click",
      "index": 4,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "4.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 10,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
        ],
        "fromRowNumber": 48,
        "row": 51,
        "toRowNumber": 54,
      },
      "consoleEntries": Array [],
      "endTimestamp": 13,
      "fnName": "click",
      "index": 5,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "5.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 12,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
        ],
        "fromRowNumber": 49,
        "row": 52,
        "toRowNumber": 55,
      },
      "consoleEntries": Array [],
      "endTimestamp": 15,
      "fnName": "click",
      "index": 6,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "6.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 14,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
          "",
        ],
        "fromRowNumber": 50,
        "row": 53,
        "toRowNumber": 56,
      },
      "consoleEntries": Array [],
      "endTimestamp": 17,
      "fnName": "click",
      "index": 7,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "7.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 16,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
          "",
          "                const counter = await page.$('#counter');",
        ],
        "fromRowNumber": 51,
        "row": 54,
        "toRowNumber": 57,
      },
      "consoleEntries": Array [],
      "endTimestamp": 19,
      "fnName": "click",
      "index": 8,
      "name": "click \\"#reset\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "8.page-click.jpg",
      "selector": "#reset",
      "startTimestamp": 18,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 17,
        "errorLines": Array [
          "                await page.click('#test');",
          "                await page.click('#test');",
          "                await page.click('#reset');",
          "                await page.click('#test');",
          "",
          "                const counter = await page.$('#counter');",
          "",
        ],
        "fromRowNumber": 52,
        "row": 55,
        "toRowNumber": 58,
      },
      "consoleEntries": Array [],
      "endTimestamp": 21,
      "fnName": "click",
      "index": 9,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "9.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 20,
      "unhandledExceptions": Array [],
    },
    Object {
      "codeError": Object {
        "column": 34,
        "errorLines": Array [
          "                    throw new Error('counter not found');",
          "                }",
          "",
          "                const textProp = await counter.getProperty('innerText');",
          "                const text = await textProp.jsonValue();",
          "",
          "                assert.equal(text, '1');",
        ],
        "fromRowNumber": 60,
        "row": 63,
        "toRowNumber": 66,
      },
      "consoleEntries": Array [],
      "endTimestamp": 23,
      "fnName": "getProperty",
      "index": 10,
      "name": "getProperty",
      "screenshot": "10.elementhandle-getProperty.jpg",
      "startTimestamp": 22,
      "unhandledExceptions": Array [],
    },
  ],
}
`;
